# texture

./: .gitignore  .travis.yml  Makefile  README  crop.sh  im2colouredcurve.sh  input.txt  liens_msi_img.txt  liens_pan_img.txt  meshmoche.sh  meshrecale.sh  pipeline_mvg_mvs.sh
colors/: croprgb.sh
data/: README  a.off  extract_rpc_from_ntf.py  input_try.txt  make_links.sh  pairs.txt  rgb_02.tiff  rgb_08.tiff  scale_01.txt  scale_curve.txt
data/ncc_shift/: ncc_shift_01.txt  ncc_shift_02.txt  ncc_shift_03.txt  ncc_shift_04.txt  ncc_shift_05.txt  ncc_shift_06.txt  ncc_shift_07.txt  ncc_shift_08.txt  ncc_shift_09.txt  ncc_shift_10.txt  ncc_shift_11.txt  ncc_shift_12.txt  ncc_shift_13.txt  ncc_shift_14.txt  ncc_shift_15.txt  ncc_shift_16.txt  ncc_shift_17.txt  ncc_shift_18.txt  ncc_shift_19.txt  ncc_shift_20.txt  ncc_shift_21.txt  ncc_shift_22.txt  ncc_shift_23.txt  ncc_shift_24.txt  ncc_shift_25.txt  ncc_shift_26.txt  ncc_shift_27.txt  ncc_shift_28.txt  ncc_shift_29.txt  ncc_shift_30.txt  ncc_shift_31.txt  ncc_shift_32.txt  ncc_shift_33.txt  ncc_shift_34.txt  ncc_shift_35.txt  ncc_shift_36.txt  ncc_shift_37.txt  ncc_shift_38.txt  ncc_shift_39.txt  ncc_shift_40.txt  (+6 more)
data/xywh/: xywh_01.txt  xywh_02.txt  (+44 more)
doc/: TODO  avancement.tex
mcode/: asc_read.m  asc_write.m  demo_poisson.m  miniodemo.m
scripts/: all_new.sh  c2p.sh  compute_drift_field.m  config.sh  config_try.sh  entire.sh  frontal_edges.m  frontal_vertices.m  fusion.m  get_shadow_threshold.m  im2colouredcurve.sh  imwrite_with_tiff.m  make_links.sh  matlab_wrapper.m  mesh1im.sh  meshmoche_old.sh  one_image.sh  scalar_edges.m  scalar_vertices.m  scaledim2colouredcurve.sh  shadow.sh  untitled.m
src/: colorfancy.c  colorize.c  colorize_vertices_from_one_image.c  colorize_vertices_from_one_image.h  colorize_with_shadows.c  colormap.c  colormultiple.c  colormultiple_mesh.c  colorsingle.c  compile.sh  create_mesh.c  create_scene.cc  create_scene.cpp  create_sfm_data.py  croprgb.sh  decomp_affine.py  drawtriangle.c  drawtriangle.h  dsm_from_points.c  fail.c  fusions.c  fusions.h  get_P_of_crop.c  get_corners.c  get_corners_utm.c  get_msi_offset.c  get_projection_matrix.c  get_sun_dir.c  get_utm_normal_shadow.c  get_utm_normal_shadow.h  glflip.c  iio.c  iio.h  img.cc  img.h  img_tools.h  mesh_t.h  mflip.c  ncc_compute_shift.cc  normals.c  (+18 more)
src/copy_martin/: CMakeLists.txt  Makefile  README.txt  gc.cpp  gradcorr.cpp  gradient.cpp  iio.h  matops.cpp  registerAll.cpp  satreg.h
(+81 files in other folders)
